--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ fig
 *.json
 pymc_samples/*
 *.rds
+src/stan/GT_nb_ase_refbias_inter_prior
+src/stan/GT_nb_ase_refbias_inter_prior
+src/stan/GT_nb_ase_refbias_intra_prior
