Tidy up used scripts with old model file

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ src/stan/GT_nb_ase_refbias_inter_prior
 src/stan/GT_nb_ase_refbias_inter_prior
 src/stan/GT_nb_ase_refbias_intra_prior
 fig_*
+*.RData
